0.1745
    - show_datatype method return lower case string
    - show_typename method return lower case string
    - DBIx::Custom::Result filter_on method is DEPRECATED!
    - DBIx::Custom::Result filter_off method is DEPRECATED!
0.1744
    - id option work if id count is lower than primary key count.
    - removed EXPERIMETNAL status from update_or_insert method and
      DBIx::Custom::Model's update_or_insert method
    - removed EXPERIMENTAL status from reuse option
    - removed EXPERIMENTAL status from update_at option and created_at option
    - removed EXPERIMETNAL status from now attribute
0.1743
    - DBIx::Custom::Model execute method is DEPRECATED!
    - fixed bug that update_all can't receive parameter as first argument
    - fixed bug that delete_all can't receive parameter as first argument
    - fixed where clause parsing bug when time(like 00:00:00) contain
0.1742
    - fixed update_or_insert method bug
    - micro optimization
0.1741
    - added EXPERIMENTAL update_or_insert to DBIx::Custom::Model
0.1740
    - EXPERIMENTAL update_or_insert need id and primary_key option
      and added option option
    - insert method created_at and updated_at option can receive scalar reference
    - update method updated_at option can receive scalar reference
    - select column option [COLUMN => ALIAS] syntax is DEPRECATED!
    - added EXPERIMENTAL q method
    - execute method id option is DEPRECATED!
0.1739
    - insert timestamp option is DEPRECATED!
      use created_at option with now attribute
    - update timestamp option is DEPRECATED!
      use updated_at option wieh now attribute
    - insert_timestamp method is DEPRECATED!
      use now method
    - update_timestamp method is DEPRECATED!
      use use now method
    - added EXPEREIMTNAL now method
    - added EXPERIMENTAL insert created_at option
    - added EXPERIMETNAL insert updated_at option
    - added EXPERIMETNAL update updated_at option